// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Quiz Poll renders correctly 1`] = `
<jest>
  <section
    class="ecl-quiz ecl-quiz--poll"
    data-ecl-auto-init="Quiz"
    id="quiz-poll"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <ol
        class="ecl-quiz__list"
      >
        <li
          class="ecl-quiz-card"
          id="quiz-poll-item1"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <fieldset>
                <legend
                  class="ecl-quiz-card__question"
                  id="quiz-poll-item1-question"
                >
                  Which institution proposes new EU laws?
                </legend>
                <ol
                  class="ecl-quiz-card__options"
                  type="A"
                >
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="true"
                        name="quiz-poll-item1-options"
                        type="radio"
                      />
                      European commission
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item1-options"
                        type="radio"
                      />
                      European parliament
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item1-options"
                        type="radio"
                      />
                      European Central Bank
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item1-options"
                        type="radio"
                      />
                      Court of Justice of the European Union
                    </label>
                  </li>
                </ol>
              </fieldset>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-item1-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is A.
                </div>
                The European Commission has the exclusive right to propose new EU laws
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  European commission
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--success ecl-icon-phosphor--check-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  European parliament
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  European Central Bank
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  Court of Justice of the European Union
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
              </ol>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          id="quiz-poll-item2"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <fieldset>
                <legend
                  class="ecl-quiz-card__question"
                  id="quiz-poll-item2-question"
                >
                  What document allows EU citizens to travel freely between most EU countries?
                </legend>
                <ol
                  class="ecl-quiz-card__options"
                  type="A"
                >
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item2-options"
                        type="radio"
                      />
                      A valid ID card.
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="true"
                        name="quiz-poll-item2-options"
                        type="radio"
                      />
                      A valid ID card or passport
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item2-options"
                        type="radio"
                      />
                      A valid passport.
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item2-options"
                        type="radio"
                      />
                      None of these
                    </label>
                  </li>
                </ol>
              </fieldset>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-item2-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is B.
                </div>
                A valid ID card or passport is usually enough to travel freely between most EU countries.
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  A valid ID card.
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  A valid ID card or passport
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--success ecl-icon-phosphor--check-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  A valid passport.
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  None of these
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
              </ol>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          id="quiz-poll-item3"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <fieldset>
                <legend
                  class="ecl-quiz-card__question"
                  id="quiz-poll-item3-question"
                >
                  What currency is used in many EU countries?
                </legend>
                <ol
                  class="ecl-quiz-card__options"
                  type="A"
                >
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item3-options"
                        type="radio"
                      />
                      The pound is the most used currency in the EU
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item3-options"
                        type="radio"
                      />
                      The Leu is by far the most used currency in the European Union 
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="true"
                        name="quiz-poll-item3-options"
                        type="radio"
                      />
                      The euro (€) is used in many EU member states.
                    </label>
                  </li>
                </ol>
              </fieldset>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-item3-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is C.
                </div>
                The Euro is the official currency used by many EU conutries
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  The pound is the most used currency in the EU
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  The Leu is by far the most used currency in the European Union 
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  The euro (€) is used in many EU member states.
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--success ecl-icon-phosphor--check-circle"
                    />
                  </span>
                </li>
              </ol>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          id="quiz-poll-item4"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <fieldset>
                <legend
                  class="ecl-quiz-card__question"
                  id="quiz-poll-item4-question"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit?
                </legend>
                <ol
                  class="ecl-quiz-card__options"
                  type="A"
                >
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item4-options"
                        type="radio"
                      />
                      Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="true"
                        name="quiz-poll-item4-options"
                        type="radio"
                      />
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item4-options"
                        type="radio"
                      />
                      ivamus auctor blandit auctor.
                    </label>
                  </li>
                </ol>
              </fieldset>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-item4-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is B.
                </div>
                Duis id mattis libero. Quisque accumsan nisi
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--success ecl-icon-phosphor--check-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  ivamus auctor blandit auctor.
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
              </ol>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          id="quiz-poll-item5"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--question ecl-icon ecl-icon--2xl ecl-icon-phosphor--question"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category"
                >
                  Quiz
                </span>
              </div>
              <fieldset>
                <legend
                  class="ecl-quiz-card__question"
                  id="quiz-poll-item5-question"
                >
                  Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
                </legend>
                <ol
                  class="ecl-quiz-card__options"
                  type="A"
                >
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item5-options"
                        type="radio"
                      />
                      Aenean est metus, malesuada sed suscipit id, tempor non sapien.
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="false"
                        name="quiz-poll-item5-options"
                        type="radio"
                      />
                      In id nisi vel diam mollis varius. In vitae dui et dolor suscipit venenatis.
                    </label>
                  </li>
                  <li
                    class="ecl-quiz-card__option"
                  >
                    <label
                      class="ecl-quiz-card__label"
                    >
                      <input
                        data-ecl-quiz-card-flip=""
                        data-ecl-quiz-card-input=""
                        data-match="true"
                        name="quiz-poll-item5-options"
                        type="radio"
                      />
                      Aenean facilisis venenatis lacus, et egestas quam mattis eu.
                    </label>
                  </li>
                </ol>
              </fieldset>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--2xl ecl-quiz-card__icon--success ecl-icon-phosphor--check-circle"
                  />
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--2xl ecl-icon-phosphor--x-circle"
                  />
                </div>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--success"
                  tabindex="0"
                >
                  Correct
                </span>
                <span
                  class="ecl-quiz-card__category ecl-quiz-card__category--error"
                  tabindex="0"
                >
                  Incorrect
                </span>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-poll-item5-answer"
              >
                <div
                  class="ecl-quiz-card__answer-title"
                >
                  The correct answer is C.
                </div>
                Duis id mattis libero. Quisque accumsan nisi
              </div>
              <ol
                class="ecl-quiz-card__options"
                type="A"
              >
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  Aenean est metus, malesuada sed suscipit id, tempor non sapien.
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="false"
                >
                  In id nisi vel diam mollis varius. In vitae dui et dolor suscipit venenatis.
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--x-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--error ecl-icon-phosphor--x-circle"
                    />
                  </span>
                </li>
                <li
                  class="ecl-quiz-card__option"
                  data-match="true"
                >
                  Aenean facilisis venenatis lacus, et egestas quam mattis eu.
                  <span
                    class="ecl-quiz-card__option-icon"
                  >
                    <span
                      aria-hidden="true"
                      class="wt-icon-phosphor--check-circle ecl-icon ecl-icon--xs ecl-quiz-card__option-icon--success ecl-icon-phosphor--check-circle"
                    />
                  </span>
                </li>
              </ol>
            </div>
          </article>
        </li>
      </ol>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-icon--corner-arrow"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--corner-arrow"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
  </section>
</jest>
`;

exports[`Quiz Reveal renders correctly 1`] = `
<jest>
  <section
    class="ecl-quiz ecl-quiz--reveal"
    data-ecl-auto-init="Quiz"
    id="quiz-reveal"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <ol
        class="ecl-quiz__list"
      >
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item1"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item1-question"
              >
                When you travel in the EU, what happens to your roaming charges?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item1-answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item2"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item2-question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item2-answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item3"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item3-question"
              >
                What currency is used in many EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item3-answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item4"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item4-question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item4-answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item5"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item5-question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item5-answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
      </ol>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-icon--corner-arrow"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--corner-arrow"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
  </section>
</jest>
`;

exports[`Quiz Reveal renders correctly with extra attributes 1`] = `
<jest>
  <section
    class="ecl-quiz ecl-quiz--reveal"
    data-ecl-auto-init="Quiz"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="quiz-reveal"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <ol
        class="ecl-quiz__list"
      >
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item1"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item1-question"
              >
                When you travel in the EU, what happens to your roaming charges?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item1-answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item2"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item2-question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item2-answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item3"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item3-question"
              >
                What currency is used in many EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item3-answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item4"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item4-question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item4-answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item5"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item5-question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item5-answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
      </ol>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 ecl-icon--corner-arrow"
          data-test="data-test-value"
          data-test-1="data-test-value-1"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 ecl-icon--corner-arrow"
          data-test="data-test-value"
          data-test-1="data-test-value-1"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
  </section>
</jest>
`;

exports[`Quiz Reveal renders correctly with extra class names 1`] = `
<jest>
  <section
    class="ecl-quiz ecl-quiz--reveal custom-class custom-class--test"
    data-ecl-auto-init="Quiz"
    id="quiz-reveal"
  >
    <div
      class="ecl-quiz__header"
    >
      <div
        class="ecl-quiz__title"
      >
        Ut enim ad minim veniam 
      </div>
      <div
        class="ecl-quiz__description"
      >
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
    Excepteur sint occaecat cupidatat non proident, sunt.
      </div>
    </div>
    <div
      class="ecl-quiz__viewport"
      data-ecl-quiz-slider=""
    >
      <ol
        class="ecl-quiz__list"
      >
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item1"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item1-question"
              >
                When you travel in the EU, what happens to your roaming charges?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item1-answer"
              >
                You usually pay the same at home, no extra roaming fees.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item2"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item2-question"
              >
                What document allows EU citizens to travel freely between most EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item2-answer"
              >
                A valid ID card or passport is usually enough.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item3"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item3-question"
              >
                What currency is used in many EU countries?
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item3-answer"
              >
                The euro (€) is used in many EU member states.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item4"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item4-question"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item4-answer"
              >
                Duis id mattis libero. Quisque accumsan nisi in nisl ultrices dictum
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
        <li
          class="ecl-quiz-card"
          data-ecl-quiz-card-flip=""
          id="quiz-reveal-item5"
          tabindex="0"
        >
          <article
            class="ecl-quiz-card__content"
          >
            <div
              class="ecl-quiz-card__front"
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__question"
                id="quiz-reveal-item5-question"
              >
                Nam lorem eros, auctor at feugiat id, efficitur non velit. Nam ac arcu vitae eros dapibus cursus vel eget lectus.
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Click to reveal
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
            <div
              class="ecl-quiz-card__back"
              hidden=""
            >
              <div
                class="ecl-quiz-card__header"
              >
                <div
                  class="ecl-quiz-card__icon"
                >
                  <span
                    aria-hidden="true"
                    class="wt-icon-phosphor--sparkle ecl-icon ecl-icon--xl ecl-icon-phosphor--sparkle"
                  />
                </div>
              </div>
              <div
                class="ecl-quiz-card__answer"
                id="quiz-reveal-item5-answer"
              >
                Aenean est metus, malesuada sed suscipit id, tempor non sapien. Donec viverra, odio id venenatis sollicitudin
              </div>
              <div
                class="ecl-quiz-card__flip"
              >
                
        Go back
        
                <span
                  aria-hidden="true"
                  class="wt-icon-phosphor--arrow-clockwise ecl-icon ecl-icon--m ecl-icon-phosphor--arrow-clockwise"
                />
              </div>
            </div>
          </article>
        </li>
      </ol>
    </div>
    <div
      class="ecl-quiz__pager"
    >
      <button
        class="ecl-quiz__prev"
      >
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-270 custom-class custom-class--test ecl-icon--corner-arrow"
        />
        <span
          class="ecl-quiz__prev-label"
        >
          
        Previous
      
        </span>
      </button>
      <div
        class="ecl-quiz__dots"
      />
      <button
        class="ecl-quiz__next"
      >
        <span
          class="ecl-quiz__next-label"
        >
          
        Next
      
        </span>
        <span
          aria-hidden="true"
          class="wt-icon--corner-arrow wt-icon--monochrome ecl-icon ecl-icon--xs ecl-icon--rotate-90 custom-class custom-class--test ecl-icon--corner-arrow"
        />
      </button>
      <script
        id="ecl-quiz__dot-template"
        type="text/template"
      >
        &lt;button class="ecl-quiz__dot"&gt;&lt;/button&gt;
      </script>
    </div>
    <div
      class="ecl-quiz__counter"
    />
  </section>
</jest>
`;
